--- a/k-median/buscalocal.tex
+++ b/k-median/buscalocal.tex
@@ -6,9 +6,8 @@ Definimos o custo de transporte entre duas instalações como o menor custo de t
 
 Um algoritmo de busca local começa com uma solução viável para o problema e checa se alguma alteração local melhora o custo da solução atual. Caso essa melhora ocorra, essa alteração é feita. Esse processo se repete até que não exista alteração que melhore o custo da solução corrente. A solução resultante é chamada de \emph{localmente ótima}. O tempo de execução de uma implementação dessa ideia e a qualidade da solução obtida dependem da definição adotada de alteração local. Quanto mais abrangente essa definição, melhor a solução, porém em geral mais lento será o algoritmo. Quanto mais restrita a definição, mais rápido o algoritmo, porém pior em geral a qualidade da solução final. Usualmente adotam-se restrições mínimas que garantam a polinomialidade do algoritmo.
 
-O algoritmo que descreveremos começa com um conjunto arbitrário de $k$ instalações abertas e conta apenas com operações de troca em que fechamos uma instalação aberta e abrimos uma instalação fechada. Operações que exclusivamente abram ou fechem instalações não são considerados, uma vez que apenas abrir uma instalação faz com que nossa solução se torne inviável e é fácil notar que somente fechar alguma instalação não melhora o valor da solução. O algoritmo é parametrizado por uma constante $\eps > 0$ que afeta a sua razão de aproximação e o seu consumo de tempo. Para garantir a polinomialidade, uma operação de troca só será feita se diminuir o custo da solução atual em uma razão de $1-\delta$, onde $\delta$ é escolhido em função de $\eps$ e $k$. O algoritmo resultante é chamado de {\sc BuscaLocal$_\eps$-AGKMMP} e é apresentado no Algoritmo 9. Como a solução produzida não é necessariamente localmente ótima, iremos chamá-la de solução \emph{quase localmente ótima}.
+O algoritmo que descreveremos começa com um conjunto arbitrário de $k$ instalações abertas e conta apenas com operações de troca em que fechamos uma instalação aberta e abrimos uma instalação fechada. Operações que exclusivamente abram ou fechem instalações não são considerados, uma vez que apenas abrir uma instalação faz com que nossa solução se torne inviável e é fácil notar que somente fechar alguma instalação não melhora o valor da solução. O algoritmo é parametrizado por uma constante $\eps > 0$ que afeta a sua razão de aproximação e o seu consumo de tempo. Para garantir a polinomialidade, uma operação de troca só será feita se diminuir o custo da solução atual em uma razão de $1-\delta$, onde $\delta$ é escolhido em função de $\eps$ e $k$. Como a solução produzida não é necessariamente localmente ótima, iremos chamá-la de solução \emph{quase localmente ótima}.
 
-Vamos mostrar que, para um $\eps > 0$, {\sc BuscaLocal$_\eps$-AGKMMP} é uma $(5 + \eps)$-aproximação para o problema das $k$-medianas métrico.
 \begin{algorithm}[H]
     \caption{\sc BuscaLocal$_\eps$-AGKMMP$(F,D,c,k)$}
     \begin{algorithmic}[1]
@@ -83,13 +82,13 @@ em que a igualdade vale uma vez que $\delta = \frac{\epsilon}{(5+\epsilon)k}$.
 Agora, é necessário mostrar que o algoritmo é polinomial.
 
 \begin{theorem}
-    O algoritmo {\sc BuscaLocal$_\eps$-AGKMMP$(F,D,c,k)$} toma tempo polinomial para executar.
+    O algoritmo {\sc BuscaLocal$_\eps$-AGKMMP} toma tempo polinomial para executar.
 \end{theorem}
 \begin{proof}
-    Uma instância do problema das $k$-medianas consiste em inteiros $n$ e $m$ que designam o número de instalações e clientes, uma matriz $C$ com $nm$ elementos e um inteiro $k$. Se $C_\text{max}$ é o maior valor absoluto de um elemento de $C$, então o tamanho da instância é $O(mn\log{C_\text{max}})$. 
+    Uma instância do problema das $k$-medianas consiste em inteiros $n$ e $m$ que designam o número de instalações e clientes, uma matriz $C$ com $nm$ custos não-negativos e um inteiro $k$. Se $C_\text{max}$ é o maior custo em $C$, então o tamanho da instância é $O(mn\log{C_\text{max}})$. 
 
     Claramente, uma iteração do laço da linha 3 consome tempo polinomial. Precisamos apenas mostrar que o número de iterações do laço do linha 3 é polinomial no tamanho da instância.
-    Podemos assumir sem perda de generalidade que todos os custos são inteiros. Seja $M$ o valor da solução inicial. Note que se $\rho$ é um inteiro tal que $(1-\delta)^\rho M < 1$, então o algoritmo não fará mais que $\rho$ iterações. Como $ 1 + x < e^x$ para todo $x\neq 0$, sabemos que $(1 - \delta)^{\frac{1}{\delta}} < \frac{1}{e}$. Quando elevamos tudo por $\ln M$ temos $(1- \delta)^{\frac{1}{\delta}\ln M} < \frac{1}{M}$ e, portanto, vale que $ (1- \delta)^{\frac{1}{\delta}\ln M}M < 1$. Então o número de iterações do laço da linha 3 do algoritmo é no máximo $\frac{1}{\delta}\ln M$. Como $M \leq m C_\text{max}$, concluímos que o número de iterações é polinomial no tamanho da instância.
+    Podemos assumir sem perda de generalidade que todos os custos são inteiros. Seja $M$ o valor da solução inicial. Note que se $\rho$ é um inteiro tal que $(1-\delta)^\rho M < 1$, então o algoritmo não fará mais que $\rho$ iterações. Como $ 1 + x < e^x$ para todo $x\neq 0$, sabemos que $(1 - \delta)^{\frac{1}{\delta}} < \frac{1}{e}$. Quando elevamos tudo a $\ln M$ temos $(1- \delta)^{\frac{1}{\delta}\ln M} < \frac{1}{M}$ e, portanto, vale que $ (1- \delta)^{\frac{1}{\delta}\ln M}M < 1$. Então o número de iterações do laço da linha~3 do algoritmo é no máximo $\frac{1}{\delta}\ln M$. Como $M \leq m C_\text{max}$, concluímos que o número de iterações é polinomial no tamanho da instância.
 \end{proof}
 
-Arya, Garg, Khandekar, Meyerson, Munagala e Pandit~\cite{AryaLocal} também desenvolveram um algoritmo de busca local para o problema das $k$-medianas métrico que permite trocas de conjuntos de instalações de tamanho maior que 1. Esse algoritmo é parametrizado em um número $p$ e, no lugar de trocar uma instalação aberta por uma instalação fechada, ele troca um conjunto $A$ de instalações abertas por um conjunto $B$ de instalações fechadas, tais que $|A| = |B| \leq p$. Isso resulta em uma $(3 + \frac{2}{p})$-aproximação. O parâmetro $p$ está diretamente ligado ao tempo de execução do algoritmo. Tomando $p$ grande o suficiente, é possível desenvolver um algoritmo que é uma $(3+\eps)$-aproximação para qualquer $\eps >0$.
+Arya, Garg, Khandekar, Meyerson, Munagala e Pandit~\cite{AryaLocal} também desenvolveram um algoritmo de busca local para o problema das $k$-medianas métrico que permite trocas de múltiplas instalações simultaneamente. Esse algoritmo é parametrizado em um número $p$ e, no lugar de trocar uma instalação aberta por uma instalação fechada, ele troca um conjunto $A$ de instalações abertas por um conjunto $B$ de instalações fechadas, tais que $|A| = |B| \leq p$. Isso resulta em uma $(3 + \frac{2}{p})$-aproximação. O parâmetro $p$ está diretamente ligado ao tempo de execução do algoritmo. Tomando $p$ grande o suficiente, é possível desenvolver um algoritmo que é uma $(3+\eps)$-aproximação para qualquer $\eps >0$.
