--- a/main.tex
+++ b/main.tex
@@ -76,7 +76,7 @@ Assim, temos um grafo $G = (V,E)$ completo em que $V$ são cidades e temos um cu
 
 Iremos nos restringir às versões métricas de cada um desses problemas. Nesse caso, as funções de custo representam distâncias e satisfazem a desigualdade triangular. A desigualdade triangular se comporta de maneira diferente entre os problemas devido às diferentes definições das funções de custo. Para uma instância $(G,c)$ do problema dos $k$-centros, dadas cidades $i,j,k \in V(G)$ vale que $ c_{ij} \leq c_{ik} + c_{kj}$. Para uma instância $(F,D,c,.)$ do problema das $k$-medianas ou de localização de instalações, para $j,\ell \in D$ e $i,h \in F$ vale que $c_{ij} \leq c_{i\ell} + c_{h\ell} + c_{h\ell}$.
 
-Diversos métodos podem ser utilizados para aproximar o problema de localização de instalações métrico. Charikar e Guha desenvolveram um algoritmo com razão de aproximação $2.414$ utilizando o método de busca local~\cite{Charikar&Guha'05}.  Esse problema também pode ser modelado como um problema de programação inteira e, por isso, técnicas envolvendo programação linear podem ser aplicadas a ele.  Por exemplo, há algoritmos que fazem o arredondamento de soluções da relaxação linear do programa inteiro para obter uma solução aproximada do problema.  Alguns destes algoritmos atingem boas razões de aproximação, por exemplo, chegando a 1.677~\cite{Byrka&Aardal'10}. Entretanto, a melhor aproximação encontrada utiliza vários métodos, incluindo o conhecido método primal-dual, e garante uma razão de aproximação 1.488~\cite{LI'13}. Essa não é muito distante do melhor que se poderia encontrar, uma vez que Guha e Khuller mostraram que não existe algoritmo para esse problema com razão de aproximação melhor que 1.463~\cite{GUHA1999228}, a menos que $P = \NP$.
+Diversos métodos podem ser utilizados para aproximar o problema de localização de instalações métrico. Charikar e Guha desenvolveram um algoritmo com razão de aproximação $2.414$ utilizando o método de busca local~\cite{Charikar&Guha'05}.  Esse problema também pode ser modelado como um problema de programação linear inteira e, por isso, técnicas envolvendo programação linear podem ser aplicadas a ele.  Por exemplo, há algoritmos que fazem o arredondamento de soluções da relaxação do programa linear inteiro para obter uma solução aproximada do problema.  Alguns destes algoritmos atingem boas razões de aproximação, por exemplo, chegando a 1.677~\cite{Byrka&Aardal'10}. Entretanto, a melhor aproximação encontrada utiliza vários métodos, incluindo o conhecido método primal-dual, e garante uma razão de aproximação 1.488~\cite{LI'13}. Essa não é muito distante do melhor que se poderia encontrar, uma vez que Guha e Khuller mostraram que não existe algoritmo polinomial para esse problema com razão de aproximação melhor que 1.463~\cite{GUHA1999228}, a menos que $P = \NP$.
 
 
 Dentre os três problemas apresentados, o problema das $k$-medianas métrico é o que tem a maior folga entre o melhor resultado de inaproximabilidade e a razão do melhor algoritmo de aproximação conhecido. Jain, Mahdian e Saberi~\cite{JMS'02} provaram que não existe algoritmo polinomial com razão de aproximação $1+ \frac{2}{e}$ para o problema das $k\text{-medianas}$, assumindo que $P \neq \NP$, enquanto a melhor aproximação encontrada tem razão $2.675 + \epsilon$~\cite{BPRST'17}.
@@ -89,10 +89,10 @@ A Seção 2 trata do problema dos $k$-centros. Começamos com uma prova de que o
 
 Na Seção 3 estão presentes algoritmos de aproximação com diversas abordagens para o problema de localização de instalações, várias dessas estão ligadas à programação linear. Primeiramente, falamos um pouco sobre o problema e mostramos que ele é $\NP$-difícil. Logo após, é descrita uma 3-aproximação que utiliza o método primal-dual desenvolvida por Jain e Vazirani~\cite{JV}. Posteriormente, são apresentados dois algoritmos que fazem arredondamentos de uma solução relaxada de um programa inteiro que modela o problema: uma 4-aproximação que faz arredondamento determinístico e uma 3-aproximação que faz arredondamento probabilístico, ambas desenvolvidas por Chudak e Shmoys~\cite{Chudak2003}. Além dessas, é apresentado um algoritmo guloso que é equivalente a uma 2-aproximação que utiliza o método dual fitting desenvolvida por Jain, Mahdian, Markakis, Saberi e Vazirani~\cite{jain2002greedy}, bem como uma $(1 + \sqrt{2} + \eps)$-aproximação baseada em técnicas de busca local desenvolvida por Gupta e Tangwongsan~\cite{DBLP:journals/corr/abs-0809-2554}. É destacado o resultado de Guha e Khuller~\cite{GUHA1999228}, que demonstra a inexistência de uma 1.46-aproximação para esse problema, a menos que $P=\NP$.
 
-Na Seção 4 destacamos o problema das $k$-medianas. Assim, como no problema de localização de instalações começamos a seção falando um pouco sobre o problema e mostrando que ele é $\NP$-difícil. Após isso, descrevemos dois algoritmos que utilizam o método de busca local. Nos algoritmos de busca local para o problema das $k$-medianas começamos com uma solução viável e realizamos operações que trocam instalações abertas por instalações fechadas. No primeiro deles, são permitidas apenas trocas unitárias, ou seja, uma instalação aberta é fechada e uma instalação fechada é aberta, e com isso é possível atingir uma 5-aproximação. No segundo, o algoritmo é parametrizado em um número $p$ e são permitidas trocas de até $p$ instalações simultaneamente. Esse algoritmo é uma $(3 + \frac{2}{p})$-aproximação. É possível fazer o termo $\frac{2}{p}$ ser tão pequeno quanto quisermos e, com isso, conseguimos uma $(3 + \eps)$-aproximação, mas isso reflete no tempo de execução do algoritmo. Ambos os algoritmos foram desenvolvidos por Arya, Garg, Khandekar, Meyerson, Munagala e Pandit~\cite{AryaLocal}. Posteriormente, falamos sobre um algoritmo primal-dual que utiliza a técnica de relaxação Lagrangeana. Esta é uma técnica sofisticada que permite substituir restrições por uma penalidade na função objetivo para soluções que não respeitam tais restrições. Além disso, esse algoritmo utiliza um arredondamento probabilístico para transformar a solução relaxada na solução do problema original e mostramos a desaleatorização desse algoritmo. Esse algoritmo foi desenvolvido por Jain e Vazirani~\cite{JV} e é uma 4-aproximação para o problema das $k$-medianas. Por fim, apresentamos o algoritmo descrito no artigo ``Approximating $k$-Median via Pseudo-Approximation'' de Li e Svensson~\cite{li2012}. Esse algoritmo foi fundamental para a descoberta dos algoritmos de aproximação mais recentes encontrados, uma vez que ele conseguiu não se limitar ao \emph{gap} de integralidade, permitindo encontrar resultados melhores para um problema que estava há uma década sem novas descobertas. Em resumo, eles provisoriamente permitem abrir mais do que $k$ instalações e transformam isso em uma solução viável sem perder muito no valor da solução. Esse algoritmo é uma $(1 + \sqrt{3} + \eps)$-aproximação.
+Na Seção 4 destacamos o problema das $k$-medianas. Assim como no problema de localização de instalações, começamos a seção falando um pouco sobre o problema e mostrando que ele é $\NP$-difícil. Após isso, descrevemos dois algoritmos que utilizam o método de busca local. Nos algoritmos de busca local para o problema das $k$-medianas começamos com uma solução viável e realizamos operações que trocam instalações abertas por instalações fechadas. No primeiro deles, são permitidas apenas trocas unitárias, ou seja, uma instalação aberta é fechada e uma instalação fechada é aberta, e com isso é possível atingir uma 5-aproximação. O segundo algoritmo é uma generalização do primeiro e é parametrizado por um número $p$. São permitidas trocas de até $p$ instalações simultaneamente. Esse algoritmo é uma $(3 + \frac{2}{p})$-aproximação. Aumentando o valor de $p$, é possível fazer o termo $\frac{2}{p}$ ser tão pequeno quanto quisermos e, com isso, conseguimos uma $(3 + \eps)$-aproximação, mas isso reflete no tempo de execução do algoritmo. Ambos os algoritmos foram desenvolvidos por Arya, Garg, Khandekar, Meyerson, Munagala e Pandit~\cite{AryaLocal}. Posteriormente, falamos sobre um algoritmo primal-dual que utiliza a técnica de relaxação Lagrangeana. Esta é uma técnica sofisticada que permite substituir restrições por uma penalidade na função objetivo para soluções que não respeitam tais restrições. Além disso, esse algoritmo utiliza um arredondamento probabilístico para transformar a solução relaxada numa solução do problema original e mostramos a desaleatorização desse algoritmo. Esse algoritmo foi desenvolvido por Jain e Vazirani~\cite{JV} e é uma 4-aproximação para o problema das $k$-medianas. Na Seção 5, apresentamos o algoritmo descrito no artigo ``Approximating $k$-Median via Pseudo-Approximation'' de Li e Svensson~\cite{li2012}. Esse algoritmo foi fundamental para a descoberta dos algoritmos de aproximação mais recentes encontrados, uma vez que ele conseguiu não se limitar ao \emph{gap} de integralidade, permitindo encontrar resultados melhores para um problema que estava há uma década sem novas descobertas. Em resumo, eles provisoriamente permitem abrir mais do que $k$ instalações e transformam isso em uma solução viável sem perder muito no valor da solução. Esse algoritmo é uma $(1 + \sqrt{3} + \eps)$-aproximação.
 É destacado o resultado de Jain, Mahdian, Markakis, Saberi e Vazirani~\cite{jain2002greedy}, que demonstra a inexistência de uma 1.736-aproximação para esse problema, a menos que $P=\NP$.
 
-Com exceção do algoritmo de busca local que troca várias instalações simultaneamente e o algoritmo que utiliza pseudo-aproximação, ambos para o problema das $k$-medianas, todos os outros algoritmos foram estudados pelos livros ``\emph{Approximation Algorithms}'' de Vazirani (V2001)~\cite{books/Vazirani} e ``\emph{The Design of Approximation Algorithms}'' de David Williamson e David Shmoys (WS2011)~\cite{books/WS}.
+Com exceção do algoritmo de busca local que troca várias instalações simultaneamente e o algoritmo que utiliza pseudo-aproximação, ambos para o problema das $k$-medianas, todos os outros algoritmos foram estudados pelos livros ``\emph{Approximation Algorithms}'' de Vijay Vazirani (V2001)~\cite{books/Vazirani} e ``\emph{The Design of Approximation Algorithms}'' de David Williamson e David Shmoys (WS2011)~\cite{books/WS}.
 % \newpage
 \section{$k$-Centros}
     \input{k-centros/intro.tex}
@@ -150,8 +150,25 @@ Com exceção do algoritmo de busca local que troca várias instalações simult
 \subsection{Inaproximabilidade}
     \input{k-median/inaprox.tex}
 \newpage
-\section{Algoritmo Li e Svensson}
+\section{Algoritmo de Li e Svensson}
     \input{k-median/pseudo.tex}
+\section{Conclusão}
+% Notamos que os algoritmos de aproximação para os problemas de clustering abrangem métodos de diferentes naturezas. 
+
+% O problema dos $k$-centros métrico, por ter uma função objetivo mais comportada, consegue alcançar a sua melhor razão de aproximação com algoritmos não muito complexos, como é o caso do algoritmo guloso.
+
+% O problema de localização de instalações métrico se beneficia de muitos métodos já conhecidos, entre eles o método de busca local, guloso e métodos baseados em programação linear. O método com a melhor razão de aproximação que estudamos foi o guloso que é equivalente ao método de dual fitting, método esse baseado em programação linear. Outros algoritmos, que misturam métodos apresentados aqui, conseguem atingir melhores razões de aproximações. O melhor conhecido foi encontrado por Shi li~\cite{LI'13} e é uma 1.488-aproximação para o problema de localização de instalações métrico. Em contrapartida, é $\NP$-difícil aproximar esse problema com razão de aproximação melhor que 1.463. Note que a diferença entre a melhor razão de aproximação possível e a melhor encontrada não é tão grande.
+
+% Por outro lado, as razões de aproximação do melhor algoritmo possível para o problema das $k$-medianas métrico e do melhor conhecido ainda estão muito distantes. O algoritmo com a melhor razão de aproximação conhecido é uma 2.675-aproximação, desenvolvida por Byrka \emph{et al.}~\cite{BPRST'17} que utiliza diretamente das ideias introduzidas por Li e Svensson~\cite{li2012}. Notamos que mesmo os problemas das $k$-medianas e de localização de instalação serem parecidos, a restrição de abrir no máximo $k$ instalações aumenta substancialmente a dificuldade do problema. Ainda assim, ambos problemas compartilham de muitos métodos em seus algoritmos.
+
+
+Notamos que os algoritmos de aproximação para os problemas de clustering abrangem métodos de diferentes naturezas.
+
+O problema dos $k$-centros métrico, por ter uma função objetivo mais comportada, consegue alcançar sua melhor razão de aproximação com algoritmos não muito complexos, como é o caso do algoritmo guloso.
+
+O problema de localização de instalações métrico beneficia-se de muitos métodos já conhecidos, entre eles os métodos de busca local, guloso e os baseados em programação linear. O método com a melhor razão de aproximação que estudamos foi o guloso, que é equivalente ao método de dual fitting --- este último baseado em programação linear. Outros algoritmos, que combinam métodos apresentados aqui, conseguem atingir melhores razões de aproximação. O melhor resultado conhecido foi encontrado por Shi Li~\cite{LI'13} e corresponde a uma 1.488-aproximação. Em contrapartida, é $\NP$-difícil aproximar esse problema com razão de aproximação melhor que 1.463. Nota-se que a diferença entre a melhor razão de aproximação possível e a melhor encontrada não é tão grande.
+
+Por outro lado, as razões de aproximação do melhor algoritmo possível para o problema das $k$-medianas métrico e do melhor algoritmo conhecido ainda estão muito distantes. O algoritmo com a melhor razão de aproximação conhecida é uma 2.675-aproximação, desenvolvida por Byrka \emph{et al.}~\cite{BPRST'17}, que utiliza diretamente as ideias introduzidas por Li e Svensson~\cite{li2012}. Observamos que, embora os problemas das $k$-medianas e de localização de instalações sejam parecidos, a restrição de abrir no máximo $k$ instalações aumenta substancialmente a dificuldade do problema. Ainda assim, ambos os problemas têm muitos algoritmos que compartilham os mesmos métodos.
 \newpage
 \bibliographystyle{plain}
 \bibliography{aprox.bib}
