--- a/aprox.bib
+++ b/aprox.bib
@@ -236,7 +236,7 @@ keywords = {approximation algorithms, k-median, dependent rounding, facility loc
 @book{garey1979computers,
   added-at = {2011-09-01T15:03:14.000+0200},
   asin = {0716710455},
-  author = {Garey, M. R. and Johnson, D. S.},
+  author = {Garey, Michael R. and Johnson, David S.},
   biburl = {https://www.bibsonomy.org/bibtex/2fac25cd952418baa739dd35243b3dbdc/folke},
   description = {Amazon.com: Computers and Intractability: A Guide to the Theory of NP-Completeness (Series of Books in the Mathematical Sciences) (9780716710455): M. R. Garey, D. S. Johnson: Books},
   dewey = {519.4},
@@ -254,7 +254,7 @@ keywords = {approximation algorithms, k-median, dependent rounding, facility loc
 }
 
 @article{Kha79,
-  author = {L. G. Khachiyan},
+  author = {Leonid G. Khachiyan},
   title = {A polynomial algorithm in linear programming},
   journal = {Dokl. Akad. Nauk SSSR},
   year = {1979},
